--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
         <meta property="og:site_name" content="[ site name ]" />
         <meta property="og:description" content="[ description ]"/>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+
         <link rel="stylesheet" href="assets/css/style.min.css">
         <!--[if lt IE 9]>
             <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
