updates to gruntfile, _form.scss

--- a/www/index.html
+++ b/www/index.html
@@ -172,6 +172,7 @@
                             <td>|</td>
                             <td>}</td>
                             <td>~</td>
+                            <td colspan="6"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -317,6 +318,14 @@
 
                     <label for="exampleInputText">File input</label>
                     <input type="text" id="exampleInputText" placeholder="Text">
+
+                    <label for="exampleSelect">Select</label>
+                    <select name="exampleSelect" id="exampleSelect">
+                        <option>option 1</option>
+                        <option>option 2</option>
+                        <option>option 3</option>
+                        <option>option 4</option>
+                    </select>
 
                     <textarea class="form-control" rows="3"></textarea>
                     <button type="submit">Submit</button>
